--- a/trunk/service/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/service/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,33 @@
 	</filter-mapping>
 
 	<error-page>
-		<error-code>404</error-code>
-		<location>/WEB-INF/views/errors/404.jsp</location>
+		<error-code>401</error-code>
+		<location>/errors/401</location>
 	</error-page>
+	
+	<error-page>
+		<error-code>403</error-code>
+		<location>/errors/403</location>
+	</error-page>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/errors/404</location>
+	</error-page>
+
+	<error-page>
+		<error-code>405</error-code>
+		<location>/errors/405</location>
+	</error-page>
+
+	<error-page>
+		<error-code>500</error-code>
+		<location>/errors/500</location>
+	</error-page>
+
+	<error-page>
+		<error-code>503</error-code>
+		<location>/errors/503</location>
+	</error-page>
+	
 </web-app>
