--- a/trunk/data/src/main/resources/META-INF/properties/application.properties
+++ b/trunk/data/src/main/resources/META-INF/properties/application.properties
@@ -10,6 +10,10 @@ elasticsearch.index.name=sgx
 elasticsearch.index.prefix=sgx_
 
 loader.threads=25
-#loader.cron=0 30 23 ? * MON-FRI
-loader.cron=0 30 14 ? * MON-FRI
+loader.cron=0 04 15 ? * MON-FRI
 loader.workdir=/tmp/sgx/
+
+indexer.failureThreshold=1
+
+loader.trigger.dir=/mnt
+loader.trigger.name=sgx.trigger
