--- a/trunk/service/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/trunk/service/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -1,1 +1,6 @@
+quanthouse.api.url=109.236.205.8
+quanthouse.api.port=6040
+quanthouse.api.user=sgx_wealthmsi_2
+quanthouse.api.password=h0QLrb81Lx
+
 elasticsearch.url=http://ec2-54-254-203-37.ap-southeast-1.compute.amazonaws.com:9200
