--- a/trunk/service/src/main/resources/META-INF/properties/application.properties
+++ b/trunk/service/src/main/resources/META-INF/properties/application.properties
@@ -1,9 +1,11 @@
 ## Quanthouse api connection settings
-quanthouse.api.sessionName=WMSI-SGX	
+quanthouse.api.sessionName=WMSI-SGX
 quanthouse.api.url=64.214.237.53
+#quanthouse.api.url=109.236.205.8
 quanthouse.api.port=6040
-quanthouse.api.user=spcapitaliq_sgxe
-quanthouse.api.password=Ahvaeb7v
+quanthouse.api.user=sgx_wealthmsi_2
+quanthouse.api.password=h0QLrb81Lx
+	
 
 elasticsearch.url=http://localhost:9200
 elasticsearch.index.name=sgx
