--- a/data/src/main/resources/META-INF/properties/application.properties
+++ b/data/src/main/resources/META-INF/properties/application.properties
@@ -3,7 +3,7 @@ elasticsearch.index.name=sgx
 elasticsearch.index.prefix=sgx_
 
 loader.threads=25
-loader.cron=0 0 22 ? * MON-FRI
+loader.cron=0 0 22 * * ?
 loader.workdir=/tmp/sgx/
 
 indexer.failureThreshold=1
